[package]
edition = "2021"
name = "colour-extractor"
version = "1.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
clustering = "0.1.0"
image = "0.24.6"
itertools = "0.10.5"
lab = "0.11.0"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.0", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
